Fix: Management-bar and management-bar-no-collapse should be same height in desktop

--- a/src/scss/atlas-theme/_management-bar.scss
+++ b/src/scss/atlas-theme/_management-bar.scss
@@ -121,6 +121,10 @@
 		left: 0;
 		margin-top: $management-bar-border-bottom-width;
 		right: 0;
+
+		@media screen and (min-width: $grid-float-breakpoint) {
+			margin-top: 0;
+		}
 	}
 }
 
